--- a/sass/index.html
+++ b/sass/index.html
@@ -1,1 +1,194 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.scss" >
+    <link rel="stylesheet" href="style.css" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Belajar SASS</title>
+  </head>
+  <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">UNIKLOH</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Product</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+       <!-- Jumbotron -->
+    <div>
+      <div>
+        <h2>MEN AIRism Jaket UV Protection Hoodie Retsleting</h2>
+        <p>
+          Jaket hoodie pria dari bahan AIRism. Siluet relax yang cocok dikenakan
+          di berbagai kesempatan. Dengan UPF40
+        </p>
+        <div>
+          <button>EXPLORE NOW</button>
+          <button>How To Buy</button>
+        </div>
+      </div>
+      <img src="./assets/jumbotron.jpg" class="img-fluid" alt="MEN AIRism" width="200px" />
+    </div>
+
+    <!-- Products -->
+    <div>
+      <h2>Our Products</h2>
+
+      <!-- Card -->
+      <div class="card">
+        <img src="./assets/men1.jpg" alt="men-1" width="200px"/>
+        <h3>MEN Jaket Parka Lined Jersey Lembut</h3>
+        <p>
+          Jaket Pria dengan desain simple yang mudah dipadankan dengan berbagai
+          style. Nyaman dipakai dengan lapisan lembut pada lengan.
+        </p>
+        <div>
+          <a>Buy Now</a>
+          <p>Rp 599.000</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/men2.jpg" alt="men-1" width="200px"/>
+        <h3>UT Mickey Stands Lengan Pendek</h3>
+        <p>
+          T-shirt yang menampilkan pose Mickey Mouse yang ikonik, seperti yang
+          digambarkan oleh para pencipta Disney terkemuka.
+        </p>
+        <div>
+          <a>Buy Now</a>
+          <p>Rp 199.000</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/men3.jpg" alt="men-1" width="200px"/>
+        <h3>MEN Kemeja Extra Fine Cotton Broadcloth Kotak</h3>
+        <p>
+          Kemeja Pria dengan 100% katun. Tersedia dalam berbagai variasi warna
+          yang menarik. Potongan yang roomy untuk gaya kasual.
+        </p>
+        <div>
+          <a>Buy Now</a>
+          <p>Rp 399.000</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="./assets/women1.jpg" alt="women-1" width="200px"/>
+        <h3>WOMEN Cardigan Relax UV Protection Crew Neck</h3>
+        <p>With UV Protection technology.</p>
+        <div>
+          <a>Buy Now</a>
+          <p>Rp 299.000</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/women2.jpg" alt="women-1" width="200px"/>
+        <h3>WOMEN T-Shirt Crop Jersey Slub Crew Neck</h3>
+        <p>T-shirt relax untuk Wanita dari bahan katun alami.</p>
+        <div>
+          <a>Buy Now</a>
+          <p>Rp 149.000</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/women3.jpg" alt="women-1" width="200px"/>
+        <h3>WOMEN Blus Rayon Lengan Pendek</h3>
+        <p>
+          Blus yang terasa halus dan lembut. Terlihat elegan dikenakan apa
+          adanya.
+        </p>
+        <div>
+          <a>Buy Now</a>
+          <p>Rp 299.000</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- About -->
+    <div>
+      <img src="./assets/about.jpeg" alt="about" width="200px"/>
+      <div>
+        <h2>About Us</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl
+          orci, maximus sed velit ut, aliquam rutrum nibh. Vestibulum ante ipsum
+          primis in faucibus orci luctus et ultrices posuere cubilia curae; In
+          consectetur id diam sed interdum. Vivamus fringilla sapien nec gravida
+          congue. Pellentesque vitae eros sit amet eros pharetra porttitor in
+          vitae enim. Nam laoreet ligula purus, commodo ultrices ipsum fringilla
+          quis. Maecenas mattis leo dictum, interdum nisi eget, consectetur
+          velit. Nam et tellus dui. Fusce vel orci eros. Aenean tempor luctus
+          suscipit. Pellentesque habitant morbi tristique senectus et netus et
+          malesuada fames ac turpis egestas. Duis at libero ultrices, vulputate
+          urna et, mollis sapien.
+        </p>
+        <button>READ MORE</button>
+      </div>
+    </div>
+
+    <!-- Contact -->
+    <div>
+      <div>
+        <h3>Subscribe Newsletter</h3>
+        <form>
+          <input type="text" placeholder="Enter your email." />
+          <input type="submit" />
+        </form>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+      <div>
+        <h2>UNIKLOH</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl
+          orci, maximus sed velit ut, aliquam rutrum nibh. Vestibulum ante ipsum
+          primis in faucibus orci luctus et ultrices posuere cubilia curae
+        </p>
+        <ul>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Signin</a></li>
+          <li><a href="#">Signup</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Legal Notice</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Feedback</a></li>
+          <li><a href="#">Reseller Guide</a></li>
+        </ul>
+      </div>
+      <p>All Right reserved by &copy;UNIKLOH.2022</p>
+    </footer>
+  </body>
+</html>
